WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
60053
Testing OwnPtrs for equality should cause a compiler error
https://bugs.webkit.org/show_bug.cgi?id=60053
Summary
Testing OwnPtrs for equality should cause a compiler error
Adam Roben (:aroben)
Reported
2011-05-03 12:43:03 PDT
Testing OwnPtrs for equality should cause a compiler error
Attachments
patch
(4.03 KB, patch)
2011-05-03 12:45 PDT
,
Adam Roben (:aroben)
andersca
: review+
Details
Formatted Diff
Diff
updated patch
(8.59 KB, patch)
2011-05-03 13:42 PDT
,
Adam Roben (:aroben)
koivisto
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Adam Roben (:aroben)
Comment 1
2011-05-03 12:45:41 PDT
Created
attachment 92108
[details]
patch
Early Warning System Bot
Comment 2
2011-05-03 13:01:15 PDT
Attachment 92108
[details]
did not build on qt: Build output:
http://queues.webkit.org/results/8538131
Adam Roben (:aroben)
Comment 3
2011-05-03 13:16:00 PDT
Comment on
attachment 92108
[details]
patch This patch is incomplete. We have existing code that does equality comparisons on OwnPtrs that this patch breaks. I'll upload a new patch that fixes the errors I can see on Windows, and then we'll let EWS chew on it.
Adam Roben (:aroben)
Comment 4
2011-05-03 13:42:35 PDT
Created
attachment 92118
[details]
updated patch This patch compiles on Windows. We'll see about other ports! (Thanks, EWS!)
WebKit Review Bot
Comment 5
2011-05-03 13:45:01 PDT
Attachment 92118
[details]
did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/JavaScriptCore/ChangeLog', u'Source..." exit_code: 1 Source/WebKit2/ChangeLog:1: ChangeLog entry has no bug number [changelog/bugnumber] [5] Total errors found: 1 in 6 files If any of these errors are false positives, please file a bug against check-webkit-style.
Adam Roben (:aroben)
Comment 6
2011-05-03 13:47:28 PDT
Comment on
attachment 92118
[details]
updated patch View in context:
https://bugs.webkit.org/attachment.cgi?id=92118&action=review
>> Source/WebKit2/ChangeLog:1 >> 2011-05-03 Adam Roben <
aroben@apple.com
> > > ChangeLog entry has no bug number [changelog/bugnumber] [5]
Whoops, I'll fix this.
WebKit Review Bot
Comment 7
2011-05-03 15:15:02 PDT
Attachment 92108
[details]
did not build on chromium: Build output:
http://queues.webkit.org/results/8532632
Antti Koivisto
Comment 8
2011-05-04 06:59:17 PDT
Comment on
attachment 92118
[details]
updated patch COMPILE_ASSERT instead of (void)"foo" thing perhaps?
Adam Roben (:aroben)
Comment 9
2011-05-04 07:34:57 PDT
(In reply to
comment #8
)
> (From update of
attachment 92118
[details]
) > COMPILE_ASSERT instead of (void)"foo" thing perhaps?
I took this suggestion but foolishly didn't let it go through EWS before committing. Fixed in
r85746
,
r85748
, and
r85749
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug