Disallow equality comparisons between [Pass]OwnPtrs

If you have two OwnPtrs that are equal, you've already lost. (Unless you're doing something
really sneaky, in which case you should stop!)

Fixes <http://webkit.org/b/60053> Testing OwnPtrs for equality should cause a compiler error

Reviewed by Anders Carlsson and Antti Koivisto.

Source/JavaScriptCore:

* wtf/OwnPtr.h:
(WTF::OwnPtr::operator==):
(WTF::OwnPtr::operator!=):
* wtf/PassOwnPtr.h:
(WTF::PassOwnPtr::operator==):
(WTF::PassOwnPtr::operator!=):
Added private equality operators that fail to compile when used. (When not used, the
compiler will skip over them because they are function templates.)

Source/WebCore:

Remove an unnecessary OwnPtr equality check in XSLT code

* dom/Document.cpp:
(WebCore::Document::setTransformSource): No need to check for equality. If the pointers are
equal, we're screwed anyway. (And the caller always passes in a newly-allocated object, so
we're safe.)

Source/WebKit2:

Remove WebPageProxy::setDrawingArea

It is unused. It also does a useless equality comparison between OwnPtrs; if they are equal,
we've already lost.

* UIProcess/WebPageProxy.cpp:
* UIProcess/WebPageProxy.h:
Removed setDrawingArea.

(WebKit::WebPageProxy::drawingArea):
(WebKit::WebPageProxy::backForwardList):
Made these functions const while I was at it.

Canonical link: https://commits.webkit.org/75431@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@85746 268f45cc-cd09-0410-ab3c-d52691b4dbfc