Source/JavaScriptCore/wtf/OwnPtr.h
@@ -82,6 +82,13 @@ namespace WTF {
     private:
         OwnPtr& operator=(const OwnPtr<T>&);
 
+        // We should never have two OwnPtrs for the same underlying object (otherwise we'll get
+        // double-destruction), so these equality operators should never be needed.
+        template<typename U> bool operator==(const OwnPtr<U>&) { COMPILE_ASSERT(false, OwnPtrs_should_never_be_equal); }
+        template<typename U> bool operator!=(const OwnPtr<U>&) { COMPILE_ASSERT(false, OwnPtrs_should_never_be_equal); }
+        template<typename U> bool operator==(const PassOwnPtr<U>&) { COMPILE_ASSERT(false, OwnPtrs_should_never_be_equal); }
+        template<typename U> bool operator!=(const PassOwnPtr<U>&) { COMPILE_ASSERT(false, OwnPtrs_should_never_be_equal); }
+
         PtrType m_ptr;
     };
 
