Source/JavaScriptCore/wtf/PassOwnPtr.h
@@ -90,6 +90,13 @@ namespace WTF {
         explicit PassOwnPtr(PtrType ptr) : m_ptr(ptr) { }
 #endif
 
+        // We should never have two OwnPtrs for the same underlying object (otherwise we'll get
+        // double-destruction), so these equality operators should never be needed.
+        template<typename U> bool operator==(const PassOwnPtr<U>&) { COMPILE_ASSERT(false, OwnPtrs_should_never_be_equal); }
+        template<typename U> bool operator!=(const PassOwnPtr<U>&) { COMPILE_ASSERT(false, OwnPtrs_should_never_be_equal); }
+        template<typename U> bool operator==(const OwnPtr<U>&) { COMPILE_ASSERT(false, OwnPtrs_should_never_be_equal); }
+        template<typename U> bool operator!=(const OwnPtr<U>&) { COMPILE_ASSERT(false, OwnPtrs_should_never_be_equal); }
+
         mutable PtrType m_ptr;
     };
 
